overflow fixes

--- a/assets/base.css
+++ b/assets/base.css
@@ -4155,7 +4155,7 @@ details-disclosure > details {
   font-family: GT-America-Trial!important;
   font-size: 24px;
   line-height: 105%;
-  letter-spacing: -.02em;
+  letter-spacing: 3px;
   text-align: center;
   text-transform: uppercase;
   margin: 20px 0;
@@ -4213,6 +4213,10 @@ details-disclosure > details {
 }
 main#MainContent {
     background: #FDFAFB;
+}
+
+.only-desktop-image, .only-desktop-image2 {
+  overflow: hidden !important;
 }
 
 @media screen and (max-width:768px){
